src/components/AlbumMosaic/AlbumMosaic.module.scss
.grid {
  position: absolute;
  inset: -250px;

  display: grid;
  --tile-size: 190px;
  --tile-gap: 20px;
  --mosaic-columns: 8;

  grid-template-columns: repeat(var(--mosaic-columns), var(--tile-size));
  grid-auto-rows: var(--tile-size);

  gap: var(--tile-gap);
  padding: 80px;

  z-index: 1;
  overflow: hidden;

  filter: blur(4px);

  animation: drift 60s linear infinite;
}

@keyframes drift {
  from {
    transform: perspective(1400px) rotateX(14deg) rotateZ(6deg) scale(1.25) translate(0, 0);
  }

  to {
    transform: perspective(1400px) rotateX(14deg) rotateZ(6deg) scale(1.25) translate(-120px, -300px);
  }
}

.grid img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 14px;
  filter: saturate(1.2);
  transform: scale(1.05);
}

@media (max-width: 700px) {
  .grid {
    --tile-size: 59px;
    --tile-gap: 6px;

    inset: -80px;
    padding: 28px;
    filter: blur(3px);
    animation-name: driftMobile;
  }

  .grid img {
    border-radius: 6px;
  }
}

@keyframes driftMobile {
  from {
    transform: perspective(900px) rotateX(10deg) rotateZ(6deg) scale(1.35) translate(0, 0);
  }

  to {
    transform: perspective(900px) rotateX(10deg) rotateZ(6deg) scale(1.35) translate(-70px, -190px);
  }
}

